Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33106

Invalid caret position after deleting text selection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 17.0.2
    • Qt Creator 17.0.1, Qt Creator 18.0.0-beta1
    • Editors
    • None
    • Linux/X11
    • a81da5b15 (17.0), 136446c5f (17.0)

      Although this bug was marked 'Fixed in 17.0.1', the issue was not fixed and can be reproduced in 17.0.1 by following the steps below (make sure you press Delete as specified and not Backspace).

      The issue can be reproduced with the following text:

      one two
      three four

      To reproduce the issue:

      • place the caret at the beginning of the word "one"
      • press Ctrl+Shift+Right (this selects the word "one" and moves the caret to the right)
      • press Delete
      • press Down

      What currently happens: the caret incorrectly ends up at the end of the word "three"
      What should happen: the caret should end up at the beginning of the word "three"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            crolix Andy Romanov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes