Utils: fix multiCursor == operator

The x position in the line is saved in the text cursor. The default ==
operator of QTextCursor does not check for this field, so we have do
this manually in order to correctly update the MultiTextCursor stored in
the text editor widget.

Fixes: QTCREATORBUG-33106
Change-Id: I3d0a727d2f20888a2799137b7bd1dea468a04b1c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>